--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "browser-sync": "^2.26.7",
     "core-js": "^3.4.2",
     "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
+    "gulp-clean-css": "^4.3.0",
+    "sass": "^1.57.1",
     "webpack": "^4.41.2",
     "webpack-stream": "^5.2.1"
   }
