--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "loan",
+  "name": "digi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ssamarin/DiGi.git"
+  },
   "author": "",
   "license": "ISC",
-  "browserslist": [
-    "> 1%",
-    "not dead"
-  ],
+  "bugs": {
+    "url": "https://github.com/ssamarin/DiGi/issues"
+  },
+  "homepage": "https://github.com/ssamarin/DiGi#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "browser-sync": "^2.26.7",
-    "core-js": "^3.4.2",
+    "browser-sync": "^2.27.10",
     "gulp": "^4.0.2",
-    "gulp-sass": "^5.1.0",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
-    "sass": "^1.57.1",
-    "webpack": "^4.41.2",
-    "webpack-stream": "^5.2.1"
-  }
+    "gulp-cli": "^2.3.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.55.0"
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
